# swak-template

./: LICENSE  Pipfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint-test.yml  publish-documentation.yml  publish-package.yml
docs/source/: conf.py  index.rst
package/: main.py
package/config/: __init__.py
package/config/defaults/: __init__.py  main.py
package/steps/: __init__.py  dry_run.py
